--- a/web/index_styles.css
+++ b/web/index_styles.css
@@ -122,7 +122,13 @@ button:hover {
     flex-grow: 1;
     padding: 10px;
     border-radius: 4px;
-    background-color: #f9f9f9;
-    overflow: auto;
+
+    /* 市松模様の背景設定 https://qiita.com/7note/items/328761825801b82ef585 を参考に対応 */
+    background-image: linear-gradient(45deg, #999 25%, transparent 25%, transparent 75%, #999 75%),
+    linear-gradient(45deg, #999 25%, transparent 25%, transparent 75%, #999 75%); /* 市松模様になるようグラデーションで単色を入れる */
+    background-position: 0 0, 10px 10px;  /* 「0 0」と1マス（1色）の大きさ「10px 10px」をそれぞれ指定 */
+    background-size: 20px 20px;           /* 1マス分の倍の大きさを指定「20px 20px」 */
+    background-color: #BBB;               /* もう一つの単色を入れる */
+
     height: 100%;
 }
