--- a/web/index_styles.css
+++ b/web/index_styles.css
@@ -67,10 +67,25 @@ h1 {
 
 h2 {
     color: #0056b3;
-    border-bottom: 1px solid #eee;
     padding-bottom: 10px;
     margin-top: 0;
     margin-bottom: 10px;
+}
+
+details > summary {
+    list-style: none;
+}
+details > summary::-webkit-details-marker {
+    display: none;
+}
+
+summary h2 {
+    display: inline-block;
+    border-bottom: 1px solid #eee;
+}
+
+summary {
+    cursor: pointer;
 }
 
 textarea {
