--- a/web/index_styles.css
+++ b/web/index_styles.css
@@ -82,10 +82,24 @@ details > summary::-webkit-details-marker {
 summary h2 {
     display: inline-block;
     border-bottom: 1px solid #eee;
+    margin-right: 10px;
 }
 
 summary {
     cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+summary::before {
+    content: '+';
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+details[open] > summary::before {
+    content: '-';
 }
 
 textarea {
